--- a/Auto_layout/Base.lproj/Main.storyboard
+++ b/Auto_layout/Base.lproj/Main.storyboard
@@ -29,54 +29,61 @@
                                         <rect key="frame" x="0.0" y="31.5" width="90.5" height="21"/>
                                         <color key="backgroundColor" red="0.99215180780000001" green="0.83346836280000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="Tmc-Dr-WSP"/>
+                                            <constraint firstAttribute="height" constant="21" id="Lm3-bS-lBR"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label_1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Byg-GL-9Jz">
+                                        <rect key="frame" x="90.5" y="32" width="50" height="21"/>
+                                        <color key="backgroundColor" red="0.67482038499999997" green="1" blue="0.29079399150000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="hU2-Bl-NFK"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label_2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B14-0e-VC5">
+                                        <rect key="frame" x="231.5" y="31" width="53.5" height="21"/>
+                                        <color key="backgroundColor" red="0.67482038499999997" green="1" blue="0.29079399150000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="nSz-qO-uZ0"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dgK-nr-kUg">
+                                        <rect key="frame" x="140.5" y="31" width="91" height="21"/>
+                                        <color key="backgroundColor" red="0.99215180780000001" green="0.83346836280000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="uif-L2-Gpm"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5cl-cw-mfF">
-                                        <rect key="frame" x="90.5" y="31.5" width="194" height="21"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label_1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Byg-GL-9Jz">
-                                                <rect key="frame" x="0.0" y="0.0" width="49.5" height="21"/>
-                                                <color key="backgroundColor" red="0.67482038499999997" green="1" blue="0.29079399150000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label_2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B14-0e-VC5">
-                                                <rect key="frame" x="140.5" y="0.0" width="53.5" height="21"/>
-                                                <color key="backgroundColor" red="0.67482038499999997" green="1" blue="0.29079399150000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dgK-nr-kUg">
-                                                <rect key="frame" x="49.5" y="0.0" width="91" height="21"/>
-                                                <color key="backgroundColor" red="0.99215180780000001" green="0.83346836280000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            </view>
-                                        </subviews>
+                                        <rect key="frame" x="285" y="32" width="90" height="21"/>
+                                        <color key="backgroundColor" red="0.99215180780000001" green="0.83346836280000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="Byg-GL-9Jz" secondAttribute="bottom" id="1Nx-6U-ING"/>
-                                            <constraint firstItem="B14-0e-VC5" firstAttribute="leading" secondItem="dgK-nr-kUg" secondAttribute="trailing" id="Cem-eL-3ja"/>
-                                            <constraint firstItem="Byg-GL-9Jz" firstAttribute="top" secondItem="5cl-cw-mfF" secondAttribute="top" id="J4n-iv-GAk"/>
-                                            <constraint firstItem="dgK-nr-kUg" firstAttribute="top" secondItem="5cl-cw-mfF" secondAttribute="top" id="Tcr-0T-j5Y"/>
-                                            <constraint firstAttribute="trailing" secondItem="B14-0e-VC5" secondAttribute="trailing" id="Xr6-Ae-hkH"/>
-                                            <constraint firstItem="dgK-nr-kUg" firstAttribute="leading" secondItem="Byg-GL-9Jz" secondAttribute="trailing" id="YkJ-tX-kRA"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="MPl-ea-q9R"/>
                                             <constraint firstAttribute="height" constant="21" id="aK7-Sr-Xuw"/>
-                                            <constraint firstAttribute="bottom" secondItem="B14-0e-VC5" secondAttribute="bottom" id="mLZ-4Z-zP8"/>
-                                            <constraint firstItem="B14-0e-VC5" firstAttribute="top" secondItem="5cl-cw-mfF" secondAttribute="top" id="nRh-aY-q4S"/>
-                                            <constraint firstItem="Byg-GL-9Jz" firstAttribute="leading" secondItem="5cl-cw-mfF" secondAttribute="leading" id="oXM-1r-1YM"/>
-                                            <constraint firstAttribute="bottom" secondItem="dgK-nr-kUg" secondAttribute="bottom" id="p2W-82-KUF"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.88225668670000001" green="0.88240832089999999" blue="0.88224714989999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="Kha-nG-Owk" firstAttribute="centerY" secondItem="5cl-cw-mfF" secondAttribute="centerY" id="BI8-QC-bNl"/>
-                                    <constraint firstItem="dgK-nr-kUg" firstAttribute="width" secondItem="Kha-nG-Owk" secondAttribute="width" id="YNu-CL-m1W"/>
-                                    <constraint firstItem="5cl-cw-mfF" firstAttribute="centerX" secondItem="URP-wE-Ykm" secondAttribute="centerX" id="sXx-Zk-jXm"/>
+                                    <constraint firstItem="5cl-cw-mfF" firstAttribute="width" secondItem="dgK-nr-kUg" secondAttribute="width" id="0pc-Er-TWZ"/>
+                                    <constraint firstItem="5cl-cw-mfF" firstAttribute="centerY" secondItem="Kha-nG-Owk" secondAttribute="centerY" id="3II-Ww-RN4"/>
+                                    <constraint firstItem="Kha-nG-Owk" firstAttribute="centerY" secondItem="URP-wE-Ykm" secondAttribute="centerY" id="46L-DF-YZV"/>
+                                    <constraint firstItem="Kha-nG-Owk" firstAttribute="leading" secondItem="URP-wE-Ykm" secondAttribute="leading" id="Clc-i2-wcT"/>
+                                    <constraint firstItem="B14-0e-VC5" firstAttribute="centerY" secondItem="Kha-nG-Owk" secondAttribute="centerY" id="DYA-jP-dvE"/>
+                                    <constraint firstItem="dgK-nr-kUg" firstAttribute="centerY" secondItem="Kha-nG-Owk" secondAttribute="centerY" id="Ifx-8G-EyU"/>
+                                    <constraint firstItem="B14-0e-VC5" firstAttribute="leading" secondItem="dgK-nr-kUg" secondAttribute="trailing" id="OVP-Dq-aff"/>
+                                    <constraint firstItem="Byg-GL-9Jz" firstAttribute="leading" secondItem="Kha-nG-Owk" secondAttribute="trailing" id="Wu6-GJ-guc"/>
+                                    <constraint firstItem="Byg-GL-9Jz" firstAttribute="centerY" secondItem="Kha-nG-Owk" secondAttribute="centerY" id="bsk-sh-St1"/>
+                                    <constraint firstAttribute="trailing" secondItem="5cl-cw-mfF" secondAttribute="trailing" id="g88-xI-Iqz"/>
+                                    <constraint firstItem="dgK-nr-kUg" firstAttribute="leading" secondItem="Byg-GL-9Jz" secondAttribute="trailing" id="lQT-v0-K5w"/>
+                                    <constraint firstItem="5cl-cw-mfF" firstAttribute="leading" secondItem="B14-0e-VC5" secondAttribute="trailing" id="leP-Ss-6jI"/>
+                                    <constraint firstItem="Kha-nG-Owk" firstAttribute="width" secondItem="dgK-nr-kUg" secondAttribute="width" id="qrO-W9-bfg"/>
                                     <constraint firstItem="5cl-cw-mfF" firstAttribute="centerY" secondItem="URP-wE-Ykm" secondAttribute="centerY" id="v1v-Tq-HfB"/>
-                                    <constraint firstItem="5cl-cw-mfF" firstAttribute="leading" secondItem="Kha-nG-Owk" secondAttribute="trailing" id="zaJ-UJ-f4k"/>
-                                    <constraint firstItem="Kha-nG-Owk" firstAttribute="leading" secondItem="URP-wE-Ykm" secondAttribute="leading" id="zbP-I3-xjO"/>
                                 </constraints>
                             </view>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="l1_text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3BJ-S9-Cfw">
